--- a/brandy/index.html
+++ b/brandy/index.html
@@ -52,12 +52,16 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
+                        <a class="navbar-brand navbar-nav-picture" href="#"><img src="images/Chris_logo_small.png" alt=""></a>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#HOME">Home</a></li>
+                        <ul class="nav navbar-nav navbar-left font-bold">
+                            <li>
+                                <a href="#HOME">Home</a>
+                            </li>
+                        </ul>
+                        <ul class="nav navbar-nav navbar-right font-bold">
                             <li><a href="#SERVICE">Services</a></li>
                             <li><a href="#ABOUT">About</a></li>
                             <li><a href="#TESTIMONIAL">Testimonial</a></li>
@@ -73,8 +77,8 @@
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <div class="home_text wow fadeInUp animated">
-                            <h2>it’s abdullah noman</h2>
-                            <p>a user interface and user experience specialist</p>
+                            <h1>Welcome.</h1>
+                            <h3>I'm Chris Spatschek, Communication Designer.</h3>
                             <img src="images/shape.png" alt="">
                         </div>
                     </div>
