--- a/brandy/index.html
+++ b/brandy/index.html
@@ -76,10 +76,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-center">
-                        <div class="home_text wow fadeInUp animated">
+                        <div class="home_text transparent-80 wow fadeInUp animated">
                             <h1>Welcome.</h1>
                             <h3>I'm Chris Spatschek, Communication Designer.</h3>
-                            <img src="images/shape.png" alt="">
+                            <img class="shape-width" src="images/blurry-bar.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
         </div>
         </section>
     </header>
-    <section class="services" id="SERVICE">
+    <!-- <section class="services" id="SERVICE">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 text-center">
@@ -130,73 +130,28 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section class="about_us_area" id="ABOUT">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <div class="about_title">
-                        <h2>About Me</h2>
-                        <img src="images/shape.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4  wow fadeInLeft animated">
-                    <div class="single_progress_bar">
-                        <h2>DESIGN - 90%</h2>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-                                <span class="sr-only">60% Complete</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="single_progress_bar">
-                        <h2>DEVELOPMENT - 60%</h2>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-                                <span class="sr-only">60% Complete</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="single_progress_bar">
-                        <h2>MARKETING - 75%</h2>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
-                                <span class="sr-only">60% Complete</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="single_progress_bar">
-                        <h2>SEO - 95%</h2>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
-                                <span class="sr-only">60% Complete</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4  wow fadeInRight animated">
-                    <p class="about_us_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Sed quia non numquam eius modi tempora.</p>
-                </div>
-                <div class="col-md-4  wow fadeInRight animated">
-                    <p class="about_us_p">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+    </section> -->
     <section class="testimonial text-center wow fadeInUp animated" id="TESTIMONIAL">
         <div class="container">
-            <div class="icon">
-                <i class="icon-quote"></i>
-            </div>
+            <!-- <div class="icon">
+    <i class="icon-quote"></i>
+</div> -->
             <div class="owl-carousel">
-                <div class="single_testimonial text-center wow fadeInUp animated">
-                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
-                        <br/> eos qui ratione voluptatem sequi nesciunt.</p>
-                    <h4>-JOHN DOE</h4>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="single_testimonial text-center wow fadeInUp animated">
+                            <div class="col-md-2 no_padding">
+                                <div class="single_image">
+                                    <img src="images/w4.jpg" alt="">
+                                    <!-- <div class="image_overlay">
+    <a href="">View Full Project</a>
+    <h2>drawing</h2>
+    <h4>with pencil colors</h4>
+</div> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="single_testimonial text-center">
                     <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius
@@ -206,7 +161,7 @@
             </div>
         </div>
     </section>
-    <div class="fun_facts">
+    <!-- <div class="fun_facts">
         <section class="header parallax home-parallax page" id="fun_facts" style="background-position: 50% -150px;">
             <div class="section_overlay">
                 <div class="container">
@@ -245,14 +200,14 @@
                 </div>
             </div>
         </section>
-    </div>
+    </div> -->
     <section class="work_area" id="WORK">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="work_title  wow fadeInUp animated">
-                        <h1>Latest Works</h1>
-                        <img src="images/shape.png" alt="">
+                        <h1>My Work</h1>
+                        <img class="shape-width-small" src="images/blurry-bar.png" alt="">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                             <br> aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex.</p>
                     </div>
@@ -341,6 +296,62 @@
                             <button type="button" class="btn btn-primary cs-btn">Let's Talk</button>
                         </a>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="about_us_area" id="ABOUT">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <div class="about_title">
+                        <h2>About Me</h2>
+                        <img class="shape-width-small" src="images/blurry-bar.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4  wow fadeInLeft animated">
+                    <div class="single_progress_bar">
+                        <h2>DESIGN - 90%</h2>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                                <span class="sr-only">60% Complete</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single_progress_bar">
+                        <h2>DEVELOPMENT - 60%</h2>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                                <span class="sr-only">60% Complete</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single_progress_bar">
+                        <h2>MARKETING - 75%</h2>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
+                                <span class="sr-only">60% Complete</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single_progress_bar">
+                        <h2>SEO - 95%</h2>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
+                                <span class="sr-only">60% Complete</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4  wow fadeInRight animated">
+                    <p class="about_us_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Sed quia non numquam eius modi tempora.</p>
+                </div>
+                <div class="col-md-4  wow fadeInRight animated">
+                    <p class="about_us_p">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
                 </div>
             </div>
         </div>
