--- a/brandy/index.html
+++ b/brandy/index.html
@@ -52,7 +52,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand navbar-nav-picture" href="#"><img src="images/Chris_logo_small.png" alt=""></a>
+                        <a class="navbar-brand navbar-nav-picture transparent-85" href="#"><img src="images/Chris_logo_small.png" alt=""></a>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -64,7 +64,7 @@
                         <ul class="nav navbar-nav navbar-right font-bold">
                             <li><a href="#SERVICE">Services</a></li>
                             <li><a href="#ABOUT">About</a></li>
-                            <li><a href="#TESTIMONIAL">Testimonial</a></li>
+                            <li><a href="#latest-projects">Latest</a></li>
                             <li><a href="#WORK">Work</a></li>
                             <li><a href="#CONTACT">Contact</a></li>
                         </ul>
@@ -76,7 +76,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-center">
-                        <div class="home_text transparent-80 wow fadeInUp animated">
+                        <div class="home_text transparent-85 wow fadeInUp animated">
                             <h1>Welcome.</h1>
                             <h3>I'm Chris Spatschek, Communication Designer.</h3>
                             <img class="shape-width" src="images/blurry-bar.png" alt="">
@@ -87,9 +87,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-center">
-                        <div class="scroll_down">
-                            <a href="#SERVICE"><img src="images/scroll.png" alt=""></a>
+                        <div class="scroll_down transparent-85">
                             <h4>Scroll Down</h4>
+                            <a href="#SERVICE"><img class="shape-width-extra-small" src="images/arrow_down_02.png" alt=""></a>
                         </div>
                     </div>
                 </div>
