Changed: Latest Projects Section

--- a/brandy/index.html
+++ b/brandy/index.html
@@ -131,29 +131,38 @@
             </div>
         </div>
     </section> -->
-    <section class="testimonial text-center wow fadeInUp animated" id="TESTIMONIAL">
+    <section class="latest-projects wow fadeInUp animated" id="latest-projects">
         <div class="container">
-            <!-- <div class="icon">
-    <i class="icon-quote"></i>
-</div> -->
+            <div class="row">
+                <div class="col-md-12 text-left">
+                    <div class="latest-projects  wow fadeInUp animated">
+                        <h1>My latest Projects</h1>
+                        <img class="shape-width-small" src="images/blurry-bar.png" alt="">
+                    </div>
+                </div>
+            </div>
             <div class="owl-carousel">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="single_testimonial text-center wow fadeInUp animated">
-                            <div class="col-md-2 no_padding">
+                        <div class="col-md-3"></div>
+                        <div class="feature-container wow fadeInUp animated">
+                            <div class="col-md-6 text-center no_padding">
                                 <div class="single_image">
                                     <img src="images/w4.jpg" alt="">
-                                    <!-- <div class="image_overlay">
-    <a href="">View Full Project</a>
-    <h2>drawing</h2>
-    <h4>with pencil colors</h4>
-</div> -->
+                                    <div class=" about_us_p text-left">
+                                        <p> <span class="font-bold">Lorem ipsum dolor sit amet,</span> consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                    </div>
                                 </div>
                             </div>
+                            <!-- <div class="image_overlay">
+                              <a href="">View Full Project</a>
+                              <h2>drawing</h2>
+                              <h4>with pencil colors</h4>
+                            </div> -->
                         </div>
                     </div>
                 </div>
-                <div class="single_testimonial text-center">
+                <div class="single_latest-projects text-center">
                     <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius
                         <br/> modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
                     <h4>-JOHN SMITH</h4>
