--- a/brandy/index.html
+++ b/brandy/index.html
@@ -62,10 +62,10 @@
                             </li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right font-bold">
-                            <li><a href="#SERVICE">Services</a></li>
-                            <li><a href="#ABOUT">About</a></li>
+                            <!-- <li><a href="#SERVICE">Services</a></li> -->
                             <li><a href="#latest-projects">Latest</a></li>
                             <li><a href="#WORK">Work</a></li>
+                            <li><a href="#ABOUT">About</a></li>
                             <li><a href="#CONTACT">Contact</a></li>
                         </ul>
                     </div>
@@ -154,11 +154,21 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- <div class="image_overlay">
-                              <a href="">View Full Project</a>
-                              <h2>drawing</h2>
-                              <h4>with pencil colors</h4>
-                            </div> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-3"></div>
+                        <div class="feature-container wow fadeInUp animated">
+                            <div class="col-md-6 text-center no_padding">
+                                <div class="single_image">
+                                    <img src="images/w4.jpg" alt="">
+                                    <div class=" about_us_p text-left">
+                                        <p> <span class="font-bold">Lorem ipsum dolor sit amet,</span> consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -169,6 +179,11 @@
                 </div>
             </div>
         </div>
+        <!-- <div class="image_overlay">
+                              <a href="">View Full Project</a>
+                              <h2>drawing</h2>
+                              <h4>with pencil colors</h4>
+                            </div> -->
     </section>
     <!-- <div class="fun_facts">
         <section class="header parallax home-parallax page" id="fun_facts" style="background-position: 50% -150px;">
@@ -290,6 +305,62 @@
             </div>
         </div>
     </section>
+    <section class="about_us_area" id="ABOUT">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-left">
+                    <div class="about_title">
+                        <h1>About Me</h1>
+                        <img class="shape-width-small" src="images/blurry-bar.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <!-- <div class="col-md-4  wow fadeInLeft animated">
+    <div class="single_progress_bar">
+        <h2>DESIGN - 90%</h2>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                <span class="sr-only">60% Complete</span>
+            </div>
+        </div>
+    </div>
+    <div class="single_progress_bar">
+        <h2>DEVELOPMENT - 60%</h2>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                <span class="sr-only">60% Complete</span>
+            </div>
+        </div>
+    </div>
+    <div class="single_progress_bar">
+        <h2>MARKETING - 75%</h2>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
+                <span class="sr-only">60% Complete</span>
+            </div>
+        </div>
+    </div>
+    <div class="single_progress_bar">
+        <h2>SEO - 95%</h2>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
+                <span class="sr-only">60% Complete</span>
+            </div>
+        </div>
+    </div>
+</div> -->
+                <div class="col-md-4  wow fadeInRight animated">
+                    <p class="about_us_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Sed quia non numquam eius modi tempora.</p>
+                </div>
+                <div class="col-md-4  wow fadeInRight animated">
+                    <p class="about_us_p">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="call_to_action">
         <div class="container">
             <div class="row">
@@ -305,62 +376,6 @@
                             <button type="button" class="btn btn-primary cs-btn">Let's Talk</button>
                         </a>
                     </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="about_us_area" id="ABOUT">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <div class="about_title">
-                        <h2>About Me</h2>
-                        <img class="shape-width-small" src="images/blurry-bar.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4  wow fadeInLeft animated">
-                    <div class="single_progress_bar">
-                        <h2>DESIGN - 90%</h2>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-                                <span class="sr-only">60% Complete</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="single_progress_bar">
-                        <h2>DEVELOPMENT - 60%</h2>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-                                <span class="sr-only">60% Complete</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="single_progress_bar">
-                        <h2>MARKETING - 75%</h2>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
-                                <span class="sr-only">60% Complete</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="single_progress_bar">
-                        <h2>SEO - 95%</h2>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
-                                <span class="sr-only">60% Complete</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4  wow fadeInRight animated">
-                    <p class="about_us_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Sed quia non numquam eius modi tempora.</p>
-                </div>
-                <div class="col-md-4  wow fadeInRight animated">
-                    <p class="about_us_p">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
                 </div>
             </div>
         </div>
