Changed: Layout About, Call to Action

--- a/brandy/index.html
+++ b/brandy/index.html
@@ -352,11 +352,14 @@
         </div>
     </div>
 </div> -->
-                <div class="col-md-4  wow fadeInRight animated">
+                <div class="col-md-4  wow fadeInLeft animated">
                     <p class="about_us_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Sed quia non numquam eius modi tempora.</p>
                 </div>
-                <div class="col-md-4  wow fadeInRight animated">
+                <div class="col-md-4  wow fadeInLeft animated">
                     <p class="about_us_p">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                </div>
+                <div class="col-md-4 wow fadeInRight animated">
+                    <img class="about_image" src="images/chris_portrait.png">
                 </div>
             </div>
         </div>
@@ -366,14 +369,14 @@
             <div class="row">
                 <div class="col-md-8 wow fadeInLeft animated">
                     <div class="left">
-                        <h2>LOOKING FOR EXCLUSIVE DIGITAL SERVICES?</h2>
-                        <p>Proin fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Integer non dapibus diam, ac eleifend lectus.</p>
+                        <h2>Was sagst du?</h2>
+                        <p>Das Ganze hat dich neugierig gemacht und du kannst dir sogar ein gemeinsames Projekt vorstellen? Dann zögere nicht: </p>
                     </div>
                 </div>
                 <div class="col-md-3 col-md-offset-1 wow fadeInRight animated">
                     <div class="baton">
                         <a href="#CONTACT">
-                            <button type="button" class="btn btn-primary cs-btn">Let's Talk</button>
+                            <button type="button" class="btn btn-primary cs-btn">Schreib mir!</button>
                         </a>
                     </div>
                 </div>
@@ -430,7 +433,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="work-with   wow fadeInUp animated">
-                        <h3>looking forward to hearing from you!</h3>
+                        <h3>Bis bald!</h3>
                     </div>
                 </div>
             </div>
@@ -438,15 +441,15 @@
     </section>
     <footer>
         <div class="container">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 text-center">
-                        <div class="footer_logo   wow fadeInUp animated">
-                            <img src="images/logo.png" alt="">
-                        </div>
-                    </div>
-                </div>
+            <!-- <div class="container">
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <div class="footer_logo   wow fadeInUp animated">
+                <img src="images/logo.png" alt="">
             </div>
+        </div>
+    </div>
+</div> -->
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-center   wow fadeInUp animated">
